--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 header {
     background-color: white;
+    margin: 0px;
 }
 
 header img {
@@ -18,10 +19,12 @@ header img {
 header p{
     font-size: 40px;
 }
+
 nav {
     text-align: center;
     background-color: rgb(98, 114, 255);
 }
+
 
 nav a {
     padding: 20px;
@@ -29,6 +32,11 @@ nav a {
     font-size: 20px;
     text-decoration: none;
     color: rgb(253, 255, 141);
+}
+
+main {
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 main img{
