--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@ body {
     font-family: consolas;
     color: rgb(98, 114, 255);
     background-color: rgb(253, 255, 141);
+    margin: 0px;
+    
 }
 
 header {
     background-color: white;
     margin: 0px;
+    padding: 20px;
 }
 
 header img {
